--- a/package.json
+++ b/package.json
@@ -6,9 +6,13 @@
     "@emotion/react": "^11.10.0",
     "@mantine/core": "^5.0.2",
     "@mantine/dates": "^5.0.2",
+    "@mantine/dropzone": "^5.0.2",
     "@mantine/form": "^5.0.2",
     "@mantine/hooks": "^5.0.2",
     "@mantine/modals": "^5.0.2",
+    "@mantine/notifications": "^5.0.2",
+    "@mantine/nprogress": "^5.0.2",
+    "@tabler/icons": "^1.78.1",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
@@ -16,10 +20,15 @@
     "@types/node": "^16.7.13",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
+    "axios": "^0.27.2",
     "dayjs": "^1.11.4",
+    "forked.sirius.adapter": "^1.0.27",
+    "papaparse": "^5.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "tabler-icons-react": "^1.54.0",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
   },
@@ -46,5 +55,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/papaparse": "^5.3.3"
   }
 }
