--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "axios": "^0.27.2",
+    "chart.js": "^3.9.1",
     "dayjs": "^1.11.4",
     "forked.sirius.adapter": "^1.0.27",
     "papaparse": "^5.3.2",
     "react": "^18.2.0",
+    "react-chartjs-2": "^4.3.1",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
