--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "react-scripts": "5.0.1",
     "tabler-icons-react": "^1.54.0",
     "typescript": "^4.4.2",
-    "web-vitals": "^2.1.0"
+    "web-vitals": "^2.1.0",
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "react-scripts start",
